--- a/exam/src/main/java/com/example/exam/home/ggogit_home_create_seed.html
+++ b/exam/src/main/java/com/example/exam/home/ggogit_home_create_seed.html
@@ -1,7 +1,7 @@
 <!-- @format -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="css/style.css">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,14 +10,16 @@
   <body>
     <header>
       <h1>나의 트리 목록</h1>
-      <form method="get">
-        <label
-          ><input name="search" type="text" /><button>
-            <!--a태그-->
-            돋보기 아이콘
-          </button></label
+      <section>
+        <a href="" class="header-search">
+          <label
+            ><input name="search" type="text" /><button>
+              <!--a태그-->
+              돋보기 아이콘
+            </button></label
+          ></a
         >
-      </form>
+      </section>
     </header>
     <main>
       <section>
